# rpiDisplay_CMake

./: CMakeLists.txt  README.md  main.cpp  mainwidget.h  mainwindow.cpp  mainwindow.ui
backend/include/: common.h
backend/include/rtlib/: rtlib.h
backend/src/: main.cpp
backend/src/rtlib/: rtlib.c
common/include/: common.h
frontend/gui/: mainwindow.ui  stylesheet.qss
frontend/include/: BackendReceiveThread.h  CameraThread.h  CustomLineEdit.h  camera_interface.h  main.h  mainwindow.h
frontend/resources/: resources.qrc
frontend/src/: BackendReceiveThread.cpp  CameraThread.cpp  CustomLineEdit.cpp  main.cpp  mainwidget.cpp  mainwindow.cpp
gui/: stylesheet.qss
resources/: resources.qrc
scripts/: start.sh
